<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detail_payment_hist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/paymentHistory"
        android:textSize="24sp"
        android:textColor="@color/textHeader1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detail_payment_hist_label"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_payment_hist_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/detail_payment_hist_title"
        app:layout_constraintEnd_toEndOf="@id/detail_payment_hist_title"
        app:layout_constraintTop_toBottomOf="@id/detail_payment_hist_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/detail_payment_hist_date_paid_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/payHistDatePaidLabel"
            android:textColor="@color/textHeader1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detail_payment_hist_amount_label"/>

        <TextView
            android:id="@+id/detail_payment_hist_amount_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/payHistAmountLabel"
            android:textColor="@color/textHeader1"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_payment_hist_date_paid_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>