<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.billdetails.BillDetailFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.kszalai.billtracker.ui.billdetails.BillDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/billDetailNameContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/billDetailDueInfoCardView"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/billDetailImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/credit_card_icon"
                android:maxHeight="48dp"
                android:minHeight="48dp"
                android:maxWidth="48dp"
                android:minWidth="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/billDetailName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/billDetailName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.billName}"
                android:textSize="32sp"
                android:layout_marginStart="8dp"
                android:textColor="@color/textHeader1"
                app:layout_constraintTop_toTopOf="@id/billDetailImage"
                app:layout_constraintBottom_toBottomOf="@id/billDetailImage"
                app:layout_constraintStart_toEndOf="@id/billDetailImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/billDetailDueInfoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/billDetailNameContainer"
            app:layout_constraintEnd_toEndOf="@id/billDetailNameContainer"
            app:layout_constraintTop_toBottomOf="@id/billDetailNameContainer"
            app:layout_constraintBottom_toTopOf="@id/billDetailPaidInfoCardView"
            app:layout_constraintVertical_chainStyle="packed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/billDetailDueInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintStart_toStartOf="@id/billDetailNameContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billDetailNameContainer">

                <TextView
                    android:id="@+id/bill_detail_amount_due_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amountDue"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/billDetailAmountDue"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_bias="0.0"/>

                <TextView
                    android:id="@+id/billDetailAmountDue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.amountDue}"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_marginStart="3dp"
                    app:layout_constraintStart_toEndOf="@id/bill_detail_amount_due_text"
                    app:layout_constraintTop_toTopOf="@id/bill_detail_amount_due_text"
                    app:layout_constraintBottom_toBottomOf="@id/bill_detail_amount_due_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"/>

                <TextView
                    android:id="@+id/bill_detail_due_on_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dueOn"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/bill_detail_amount_due_text"
                    app:layout_constraintEnd_toStartOf="@id/billDetailDueOn"
                    app:layout_constraintTop_toBottomOf="@id/bill_detail_amount_due_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/billDetailDueOn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.dueDate}"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_marginStart="3dp"
                    app:layout_constraintStart_toEndOf="@id/bill_detail_due_on_text"
                    app:layout_constraintTop_toTopOf="@id/bill_detail_due_on_text"
                    app:layout_constraintBottom_toBottomOf="@id/bill_detail_due_on_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/billDetailPaidInfoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/billDetailDueInfoCardView"
            app:layout_constraintEnd_toEndOf="@id/billDetailDueInfoCardView"
            app:layout_constraintTop_toBottomOf="@id/billDetailDueInfoCardView"
            app:layout_constraintBottom_toTopOf="@id/billDetailPaymentRecyclerView"
            app:layout_constraintVertical_chainStyle="packed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/billDetailPaidInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <TextView
                    android:id="@+id/bill_detail_last_payment_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lastPayment"
                    android:textStyle="italic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <TextView
                    android:id="@+id/bill_detail_amount_paid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amountPaid"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/bill_detail_last_payment_text"
                    app:layout_constraintBottom_toTopOf="@id/bill_detail_paid_on_text"
                    app:layout_constraintStart_toStartOf="@id/bill_detail_last_payment_text"
                    app:layout_constraintEnd_toStartOf="@id/billDetailAmountPaid"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_bias="0.0"/>

                <TextView
                    android:id="@+id/billDetailAmountPaid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@{viewmodel.lastPaidAmount}"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintTop_toTopOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintBottom_toBottomOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"/>

                <TextView
                    android:id="@+id/bill_detail_paid_on_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datePaid"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@id/bill_detail_amount_paid_text"
                    app:layout_constraintEnd_toStartOf="@id/billDetailPaidOn"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <TextView
                    android:id="@+id/billDetailPaidOn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@{viewmodel.lastPaidDate}"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@id/bill_detail_paid_on_text"
                    app:layout_constraintTop_toTopOf="@id/bill_detail_paid_on_text"
                    app:layout_constraintBottom_toBottomOf="@id/bill_detail_paid_on_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/billDetailPaymentRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/billDetailPaidInfoCardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/billDetailPaidInfoCardView"
            app:layout_constraintEnd_toEndOf="@id/billDetailPaidInfoCardView"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/billDetailAddPaymentFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_add_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>